--- a/node/src/views/admin/pages/products/create.pug
+++ b/node/src/views/admin/pages/products/create.pug
@@ -43,6 +43,28 @@ block main
                         option(value="") -- chọn danh mục cha --
                         if(category)
                           +select-tree(category)
+                  .col-md-6 
+                    .form-group.form-check.form-check-inline
+                        input(
+                          type="radio",
+                          class="form-check-input",
+                          id="featured1",
+                          name="featured",
+                          value="1"
+                        )
+                        label(for="featured1", class="form-check-label") Nổi bật
+
+                    .form-group.form-check.form-check-inline
+                        input(
+                          type="radio",
+                          class="form-check-input",
+                          id="featured0",
+                          name="featured",
+                          value="0",
+                          checked
+                        )
+                        label(for="featured0", class="form-check-label") Không
+  
                   .col-md-6
                     .form-group
                       label(for="sku") SKU
